Update the styles

--- a/src/style/components.scss
+++ b/src/style/components.scss
@@ -5,16 +5,21 @@
     @apply flex flex-col items-center;
     & > * {@apply mt-2 mb-2;}
 
-    @screen md {@apply flex-row justify-between;}
+    @screen lg {@apply flex-row justify-between;}
   }
 
   &.main {
-    @apply w-full p-4;
+    @apply w-full p-4 leading-normal;
+    @screen md {@apply leading-loose;}
+
+    h1 {@apply leading-normal;}
 
     a {@apply text-black;}
   }
 }
 
-.home {
+.home, .getting-started {
   & > * {@apply mb-4;}
+
+  a {@apply border-black border-2 border-dashed p-1 bg-grey-light;}
 }
