--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -1,4 +1,8 @@
-html {@apply text-lg;}
+html {
+  @apply text-lg;
+
+  @screen md {@apply text-xl;}
+}
 
 button {
   @apply flex items-center justify-center cursor-pointer bg-grey;
@@ -10,10 +14,7 @@ button {
 
 a {@apply text-white;}
 
-header {
-  @apply w-full bg-grey-dark p-4 mx-auto text-white;
-}
+blockquote {@apply pl-8 pr-4 pt-4 pb-4 ml-8 mb-4 mt-4 bg-grey-lighter border-grey border-l-4 italic;}
 
-footer {
-  @apply w-full bg-grey-dark p-4 mx-auto text-white;
-}
+header, footer {@apply w-full bg-grey-dark p-4 mx-auto text-white;}
+
