--- a/src/style/components.scss
+++ b/src/style/components.scss
@@ -14,12 +14,152 @@
 
     h1 {@apply leading-normal;}
 
-    a {@apply text-black;}
+    a {
+      @apply text-black border-black border-2 border-dashed p-1 bg-grey-light cursor-pointer;
+      &:hover {@apply bg-grey;}
+    }
   }
 }
 
 .home, .getting-started {
   & > * {@apply mb-4;}
+}
 
-  a {@apply border-black border-2 border-dashed p-1 bg-grey-light;}
+.app-highlights {
+  & > .feature-description {
+    @apply min-h-32 mb-8;
+    & > * {@screen md {@apply ml-2 mr-2;}}
+    @screen md {
+      @apply min-h-48
+      & > .feature-description {@apply flex}
+    }
+  }
+
+  & > .feature-description:nth-child(even) {
+    @screen md {@apply flex flex-row-reverse;}
+  }
+  & > .feature-description:nth-child(odd) {
+    @screen md {@apply flex flex-row;}
+  }
+}
+
+.feature-image {
+  @apply hidden min-w-1/4;
+
+  @screen md {@apply block;}
+}
+
+.feature-text {
+  @screen md {@apply w-4/5;}
+}
+
+// tooltip CSS
+.tooltip {
+  display: block !important;
+  z-index: 10000;
+
+  .tooltip-inner {
+    background: black;
+    color: white;
+    border-radius: 16px;
+    padding: 5px 10px 4px;
+  }
+
+  .tooltip-arrow {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    position: absolute;
+    margin: 5px;
+    border-color: black;
+    z-index: 1;
+  }
+
+  &[x-placement^="top"] {
+    margin-bottom: 5px;
+
+    .tooltip-arrow {
+      border-width: 5px 5px 0 5px;
+      border-left-color: transparent !important;
+      border-right-color: transparent !important;
+      border-bottom-color: transparent !important;
+      bottom: -5px;
+      left: calc(50% - 5px);
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+  }
+
+  &[x-placement^="bottom"] {
+    margin-top: 5px;
+
+    .tooltip-arrow {
+      border-width: 0 5px 5px 5px;
+      border-left-color: transparent !important;
+      border-right-color: transparent !important;
+      border-top-color: transparent !important;
+      top: -5px;
+      left: calc(50% - 5px);
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+  }
+
+  &[x-placement^="right"] {
+    margin-left: 5px;
+
+    .tooltip-arrow {
+      border-width: 5px 5px 5px 0;
+      border-left-color: transparent !important;
+      border-top-color: transparent !important;
+      border-bottom-color: transparent !important;
+      left: -5px;
+      top: calc(50% - 5px);
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+
+  &[x-placement^="left"] {
+    margin-right: 5px;
+
+    .tooltip-arrow {
+      border-width: 5px 0 5px 5px;
+      border-top-color: transparent !important;
+      border-right-color: transparent !important;
+      border-bottom-color: transparent !important;
+      right: -5px;
+      top: calc(50% - 5px);
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+
+  &.popover {
+    $color: #f9f9f9;
+
+    .popover-inner {
+      background: $color;
+      color: black;
+      padding: 24px;
+      border-radius: 5px;
+      box-shadow: 0 5px 30px rgba(black, .1);
+    }
+
+    .popover-arrow {
+      border-color: $color;
+    }
+  }
+
+  &[aria-hidden='true'] {
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity .15s, visibility .15s;
+  }
+
+  &[aria-hidden='false'] {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity .15s;
+  }
 }
