--- a/src/style/components.scss
+++ b/src/style/components.scss
@@ -172,10 +172,13 @@
 .modal-header {
   @apply text-center text-2xl font-bold underline;
   @apply p-2;
+  @apply fixed;
+
+  width: inherit;
 }
 
 .modal-close-button {
-  @apply w-12;
+  @apply w-12 h-full;
   @apply absolute top-0 right-0;
   @apply border-none rounded-none;
 }
@@ -183,10 +186,6 @@
 .modal-description {
   @apply bg-white;
   @apply flex flex-col flex-wrap justify-center content-center;
-  @apply p-4;
+  @apply p-4 pt-20;
   @apply overflow-auto;
-
-  ul {
-    @screen sm {column-count: 2;}
-  }
 }
